@@ -9,21 +9,21 @@ import java.util.Arrays;
 public class InterpretedSpecialSwordItem extends InterpretedItem {
     ArrayList<String> itemProperties;
     ArrayList<String> enchantmentExtras;
-    public InterpretedSpecialSwordItem(String name, String properties, String itemCreationMethod, String modelMethod, String inSpecifyBrackets, String material) {
+    ArrayList<String> specified;
+    String rarity = "";
+    public InterpretedSpecialSwordItem(String name, String properties, String itemCreationMethod, String modelMethod, ArrayList<String> inSpecifyBrackets, String material) {
         super(new ArrayList<>(Arrays.asList(name, properties, itemCreationMethod, modelMethod, material)));
-        itemProperties = new ArrayList<>(Arrays.asList(name, properties, itemCreationMethod, modelMethod, material, inSpecifyBrackets));
+        itemProperties = new ArrayList<>(Arrays.asList(name, properties, itemCreationMethod, modelMethod, material));
         this.enchantmentExtras = RegistryInterpreter.getEnchantmentablesFromOptionalParameter(RegistryInterpreter.getContentFromFileAsList(RegistryInterpreter.itemFile), itemProperties.get(0));
-    }
-
-    public InterpretedSpecialSwordItem(String name, String properties, String itemCreationMethod, String modelMethod, String inSpecifyBrackets, String material, String rarity) {
-        super(new ArrayList<>(Arrays.asList(name, properties, itemCreationMethod, modelMethod, material)));
-        itemProperties = new ArrayList<>(Arrays.asList(name, properties, itemCreationMethod, modelMethod, material, rarity, inSpecifyBrackets));
-        this.enchantmentExtras = RegistryInterpreter.getEnchantmentablesFromOptionalParameter(RegistryInterpreter.getContentFromFileAsList(RegistryInterpreter.itemFile), itemProperties.get(0));
+        specified = inSpecifyBrackets;
+        if (itemProperties.get(2).contains("WithRarity"))
+            this.rarity = specified.getFirst();
     }
 
     @Override
     public String toString() {
-        return "    public static final DeferredItem<SwordItem> " + itemProperties.get(0).toUpperCase() + " = " + itemProperties.get(2) + "(\"" + itemProperties.get(0).toLowerCase() + "\", ModToolTiers." + itemProperties.get(4).toUpperCase() + ", " + (itemProperties.size() == 7 ? "Rarity." + itemProperties.get(5).toUpperCase() + ", " : "") + itemProperties.get(1) + ");";
+        return "    public static final DeferredItem<SwordItem> " + itemProperties.get(0).toUpperCase() + " = " + itemProperties.get(2) + "(\"" + itemProperties.get(0).toLowerCase() + "\", ModToolTiers." + itemProperties.get(4).toUpperCase() + ", "
+                + (rarity.isEmpty() ? "" : "Rarity." + rarity.toUpperCase() + ", ") + itemProperties.get(1) + ");";
     }
 
     public ArrayList<String> getItemEnchantmentTagsList() {
